--- a/learning.html
+++ b/learning.html
@@ -12,8 +12,20 @@
 <body>
 Learning react from the very basics.
 
+<div id="id01">Hello World!</div>
+<div id="learning-value"></div>
+
 <script type="text/babel">
-    //  JSX Babel code goes here
+    ReactDOM.render(
+    <h1>Hello React!</h1>,
+    document.getElementById('id01'));
+
+    const name = 'Ram';
+
+    ReactDOM.render(
+    <h1>Hello {name}</h1>,
+    document.getElementById('learning-value'));
+
 </script>
 
 </body>
