Add necessary fiels and sample react js project

--- a/learning.html
+++ b/learning.html
@@ -51,7 +51,7 @@
 	// Use of React class to create components.
 	class Goodbye extends React.Component { 
 	    render() { 
-	    const element = <h3>Hello React Componet By Class!</h3>;
+	    const element = <h3>Hello React Component By Class!</h3>;
 	    return(element); }
 	}
 
