Initail of setState function

--- a/learning.html
+++ b/learning.html
@@ -13,70 +13,37 @@
 <h1>Learning react from the very basics.</h1>
 
 <div id="root"><h3>Hello World!</h3></div>
-<div id="root_1">Hello World!</div>
-<div id="root_2">Hello World!</div>
-<div id="root_3">Hello World!</div>
-<div id="root_4">Hello World!</div>
-<div id="root_5">Hello World!</div>
-<div id="root_6">Hello World!</div>
 
 <script type="text/babel">
 
-    ReactDOM.render(
-    <h3>Hello React!</h3>,
-    document.getElementById('root_1'));
+class Hello extends React.Component {
+
+    constructor(props){
+        super(props);
+        this.state = {
+            msg: "W3Adda"
+        };
+        this.updateMsg = this.updateMsg.bind(this);
+   }
+
+    updateMsg() {
+        this.setState({
+            msg: "ReactJS"
+        });
+    }    
+
+    render() {
+        return (
+           <div>
+             <h1>Hello {this.state.msg}!</h1>
+             <button onClick={this.updateMsg}>Click me!</button>
+           </div>   
+        )
+    }
+}
 
 
-    // If an attribute is wrapped in curly braces, the value is a JavaScript expression.
-    const name = 'Ram';
-
-    ReactDOM.render(
-    <h3>Hello {name} by curly braces!</h3>,
-    document.getElementById('root_2'));
-
-
-    // React applications are usually built around a single HTML element. E.g. root id, often called root element or root node. E.g.
-	const element = <h3>Hello React element!</h3>;
-
-	ReactDOM.render(
-	element, document.getElementById('root_3'));
-
-	// React compontents are javascript functions. E.g.
-    function Welcome() {
- 	   return <h3>Hello React Component!</h3>;
-	}
-
-	ReactDOM.render(<Welcome />, document.getElementById('root_4'));
-
-	// Functional component with parameter.
-	function Hello(props) {
-	  return <h3>Hello, {props.name}!</h3>;
-	}
-
-	ReactDOM.render(<Hello name="component by parameter" />, document.getElementById('root_6'));
-
-	// Class componenet with parameter.
-	class Goodbye extends React.Component { 
-	    render() { 
-	    const element = <h3>Hello {this.props.name} Component By Class!</h3>;
-	    return(element); }
-	}
-
-	ReactDOM.render(<Goodbye name="react"/>, document.getElementById('root_5'));
-
-	class NewlyClass extends React.Component {
-
-	   constructor(props){
-	        super(props);
-	        this.state = {
-	            msg: "W3Adda"
-	        };
-	    }
-
-	    render() {
-	        return <h2>Why always hello {this.state.msg}!</h2>;
-	    }
-	}
+ReactDOM.render(<Hello />, document.getElementById('root'));
 
 
 </script>
